fixed arrows gaps and size

--- a/src/styles/image-container.scss
+++ b/src/styles/image-container.scss
@@ -21,6 +21,7 @@
     @media screen and (max-width: 980px) {
       bottom: 15px;
       left: 15px;
+      grid-gap: 0 10px;
     }
   }
   &__description {
@@ -50,6 +51,10 @@
     background-position: center;
     border-radius: 50%;
     cursor: pointer;
+    @media screen and (max-width: 980px) {
+      width: 40px;
+      height: 40px;
+    }
     &--left {
       background-image: url("../images/slider/arrow-left.svg");
       margin-right: 8px;
